# TUI

./: README.md  app.py  focus.py  focus_config.json  pyproject.toml
src/: __init__.py
src/TUI_APP/: __init__.py  app.py  config.py  main.py  screens.py  services.py
src/TUI_APP/webpageblocker/: README.md  UI.py  blocker.py  control.py  focus_config.json
tests/: test_app.py
